# scrapping_allocine

./: .gitignore  README.md  pyproject.toml
alloscrap/: .env  data.csv  main.py  scrapy.cfg
alloscrap/alloscrap/: items.py  middlewares.py  pipelines.py  settings.py
alloscrap/alloscrap/spiders/: allospider.py
